# flowsign

./: .gitignore  BASELINE_STATUS.md  BUG_INVESTIGATION_REPORT.md  COMPARISON_TABLES.md  COMPLETE_COMPARISON_TABLES.md  CORRECT_REQUIREMENTS.md  DEPENDENCIES.md  EXP2_SAMPLE_SIZE_INVESTIGATION.md  EXPERIMENT2_HTTPS_COMPARISON_TABLE.md  EXPERIMENT2_STATUS_REPORT.md  EXPERIMENT2_VPN_COMPARISON_TABLE.md  EXPERIMENT2_VPN_COMPARISON_TABLE_COMPLETE.md  EXPERIMENT3_RESOURCE_USAGE_ANALYSIS.md  EXPERIMENTS_FINAL_REPORT.md  EXPERIMENTS_STATUS.md  EXPERIMENT_2_FINAL_COMPARISON.md  EXPERIMENT_3_FINAL_COMPARISON.md  EXPERIMENT_PLAN.md  EXPERIMENT_READY.md  FINAL_COMPARISON_TABLES.md  FINAL_INVESTIGATION_SUMMARY.md  FINAL_STATUS.md  FLOWSIGN_RULE_DESIGN.md  Makefile  README.md  ROOT_CAUSE_ANALYSIS.md  STATUS_ACTUAL.md  THREE_WAY_EXPERIMENT_STATUS.md  THREE_WAY_EXPERIMENT_SUMMARY.md  alert_csv.txt  benchmark_test.cpp  calculate_metrics.py  cicids2017_https_statistics.json  compute_vpn_metrics.py  correlate_vpn_alerts.py  count_class_balance.py  count_https_cicids2017.py  dataset_benchmark_test.cpp  dataset_loader.cpp  dataset_loader.hpp  (+95 more)
obsolete_C/: benchmark_test.c  demo_test.c  event_system.c  event_system.h  flow_analyzer.c  flow_analyzer.h  flow_rules.c  flow_rules.h  flow_test.c  integrated_test.c  interactive_test.c  performance_test.c  performance_test.h  proc1_test.c  proc2_test.c  proc2_test_events.c  proc2_test_events_simple.c  snortsharp_integration.c  snortsharp_integration.h  validation_test.c  verbose_test.c
obsolete_experiments/: README_ARCHIVE.md  alert_csv.txt  benchmark_rules.txt  cheat_rules_comparison.json  cicids2017_combined_system_evaluation.json  cicids2017_comparison_results.json  cicids2017_flowsign_per_attack_metrics.json  cicids2017_flowsign_results.json  cicids2017_flowsign_rules.txt  cicids2017_snort3_pseudo_accuracy.json  (+1 more)
snort3/src/codecs/root/: CMakeLists.txt  cd_linux_sll.cc  cd_linux_sll.h
snort3/src/snortsharp/: CMakeLists.txt  flow_analyzer.hpp  flow_rules.hpp  parallel_snort_integration.cpp  snort3_snortsharp_bridge.cpp  snort3_snortsharp_bridge.cpp.backup  snortsharp_integration.cpp  snortsharp_integration.hpp
(+32 files in other folders)
